--- a/161026—iOS上的多线程和GCD入门教程.md
+++ b/161026—iOS上的多线程和GCD入门教程.md
@@ -1,12 +1,11 @@
 # iOS上的多线程和GCD入门教程
-
-  你有没有遇到这种情况：当你开发一个app时，某个地方你想处理一些事情，但是由于UI长时间没有反应而停顿了好长时间？
+  你有没有遇到这种情况：当你开发一个app时，某个地方你想处理一些事情，但是由于UI长时间没有反应而停顿了好长时间？
   通常，这种迹象说明，你的app需要多线程处理下！
-  在这个教程，你将获得关于iOS上可用的核心多线程API：GCD的相关经验！
-     我们为你提供一个根本没使用多线程的app,然后使用多线程修改它，你会为前后的不同感到震惊的！
-     该教程假设你已经熟悉基本的iOS开发。如果你完全是个iOS开发新手，你可以看看[其它教程](https://www.raywenderlich.com/?page_id=2519)。
-     
-     废话少说，痛饮一番碳酸饮料或者嚼嚼泡泡糖，开始该教程吧！你已经踏上了多线程之路啦！
+  在这个教程，你将收货关于iOS的核心多线程API：GCD的相关经验！
+  我们为你提供一个根本没使用多线程的app,然后使用多线程修改它，你会为前后的不同感到震惊的！
+  该教程假设你已经熟悉基本的iOS开发。如果你完全是个iOS开发新手，你可以看看[其它教程](https://www.raywenderlich.com/?page_id=2519)。
+  
+  废话少说，痛饮一番碳酸饮料或者嚼嚼泡泡糖，开始该教程吧！你已经踏上了多线程之路啦！
 
  ### Why Should I Care?  
      
