--- a/161026—iOS上的多线程和GCD入门教程.md
+++ b/161026—iOS上的多线程和GCD入门教程.md
@@ -13,42 +13,41 @@
      
 ![ImageGrabber.jpg](http://upload-images.jianshu.io/upload_images/402808-08ca1c3f39c41188.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-     这个APP叫`ImageGrabber`，它主要是通过这个web页面的HTML并且检索其中所有相关的图像,显示在表视图,这样你就可以更仔细地看到他们。酷的是它甚至下载zip文件并查找zip中所有图片,比如[vickiwenderlich.com](http://www.vickiwenderlich.com/)上的[free game art zip](http://www.vickiwenderlich.com/downloads/GameArt/Monkey_Platformer_GameArt.zip)。
+这个APP叫`ImageGrabber`，它主要是通过这个web页面的HTML并且检索其中所有相关的图像,显示在表视图,这样你就可以更仔细地看到他们。酷的是它甚至下载zip文件并查找zip中所有图片,比如[vickiwenderlich.com](http://www.vickiwenderlich.com/)上的[free game art zip](http://www.vickiwenderlich.com/downloads/GameArt/Monkey_Platformer_GameArt.zip)。
  接下来，点击按钮`Grab!`,看是否有反应。
- 
-…
-…waiting…
-…
-…waiting…
-…
-…waiting…
-…
+> ...
+> ...waiting...
+> ...
+> ...waiting...
+> ...
+> ...waiting...
+> ...
 
 ![Tomato-San is angry!.jpg](http://upload-images.jianshu.io/upload_images/402808-b5180cebdd49555e.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 哇！它终于有效果了，但是等了太久！这App解析HTML，下载所有图片和zip文件，以及解压zip文件，都在主线程。最终的结果是用户不得不花费大量宝贵时间等待,还不一定确定这个App是否还在加载!这样后果是非常可怕的：用户可能会退出App,系统会在等了太久而终止App，或者生气的Tomato先生会攻击你的树屋。
-     幸运的是有了多线程的营救！我们把这些繁重的工作通过苹果提供的简单的APIs放到后台处理，而不再试都放在主线程中。
+幸运的是有了多线程的营救！我们把这些繁重的工作通过苹果提供的简单的APIs放到后台处理，而不再试都放在主线程中。
 
 #多线程和群猫们
-  如果你已经熟悉多线程的概念,可以随时跳到下一节,否则，继续读吧，骚年!
-     当你想到一个程序正在运行时，你可以想象它就像（下图）一只猫要移动那个箭头。猫移动箭头和程序按照它的逻辑运行一样，都是同一时间只移动一步。
+如果你已经熟悉多线程的概念,可以随时跳到下一节,否则，继续读吧，骚年!
+当你想到一个程序正在运行时，你可以想象它就像（下图）一只猫要移动那个箭头。猫移动箭头和程序按照它的逻辑运行一样，都是同一时间只移动一步。
      
 ![MultithreadCat-500x158.jpg](http://upload-images.jianshu.io/upload_images/402808-9e9d098cea46a948.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-     多线程就像一群猫和一个箭头。（一群猫移动一个箭头！）
-     `ImageGrabber`的问题是在主线程中使得我们可怜的猫精疲力尽地去做所有的工作。因此，在这个App绘制UI或者相应用户交互事件之前，不得不先完成所有的耗时操作，比如下载文件，解析HTML等。
+多线程就像一群猫和一个箭头。（一群猫移动一个箭头！）
+`ImageGrabber`的问题是在主线程中使得我们可怜的猫精疲力尽地去做所有的工作。因此，在这个App绘制UI或者相应用户交互事件之前，不得不先完成所有的耗时操作，比如下载文件，解析HTML等。
      
 ![OverworkedCat.jpg](http://upload-images.jianshu.io/upload_images/402808-7527bf10ebbe7397.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-     那么我们该怎样让劳累过度的猫喘口气呢？最简单的解决方案就是买更多的猫（事实上，我有一个朋友相当在行这）。于是，`主猫`来响应更新UI和用户的交互事件，而其他的猫则绕着后台去下载文件，解析HTML，然后传表视图（这个猫就退下，等待新的任务）！
-     这就是多线程技术的核心。就像群猫（在后台）执行各种任务，这程序被放在不同的线程执行。
-     iOS开发，你习惯用的函数方法（比如`viewDidLoad`,`button点击回调`等）都在主线程，你不想在主线程执行耗时操作，这样的话你的UI会很卡顿并且`主猫`会劳累过度。
+那么我们该怎样让劳累过度的猫喘口气呢？最简单的解决方案就是买更多的猫（事实上，我有一个朋友相当在行这）。于是，`主猫`来响应更新UI和用户的交互事件，而其他的猫则绕着后台去下载文件，解析HTML，然后传表视图（这个猫就退下，等待新的任务）！
+这就是多线程技术的核心。就像群猫（在后台）执行各种任务，这程序被放在不同的线程执行。
+iOS开发，你习惯用的函数方法（比如`viewDidLoad`,`button点击回调`等）都在主线程，你不想在主线程执行耗时操作，这样的话你的UI会很卡顿并且`主猫`会劳累过度。
 
- #孩子们，别再这样做了！
-   让我们一起来看看当前的代码并且讨论它是怎么执行的，以及为什么这样不好！
-     `ImageGrabber`这个App的`rootViewController`是`WebViewController`，当你点击button`Grab!`后，它会获取当前页的HTML，并且传递给`ImageListViewController`。
-     在`ImageListViewController`的`viewDidLoad`里，创建了一个新的`ImageManager`对象并执行它的`process`方法。`ImageListViewController`这个类，不仅处理`ImageInfo`信息，还包含所有的耗时操作代码，比如：解析HTML，从网络拉取图片，以及解压文件。
-     下面我们来看看`ImageManager`和`ImageInfo`是干什么用的：
+#孩子们，别再这样做了！
+让我们一起来看看当前的代码并且讨论它是怎么执行的，以及为什么这样不好！
+`ImageGrabber`这个App的`rootViewController`是`WebViewController`，当你点击button`Grab!`后，它会获取当前页的HTML，并且传递给`ImageListViewController`。
+在`ImageListViewController`的`viewDidLoad`里，创建了一个新的`ImageManager`对象并执行它的`process`方法。`ImageListViewController`这个类，不仅处理`ImageInfo`信息，还包含所有的耗时操作代码，比如：解析HTML，从网络拉取图片，以及解压文件。
+下面我们来看看`ImageManager`和`ImageInfo`是干什么用的：
 > `ImageManager.m`的`processHTML`方法 : 使用正则表达式匹配去搜索HTML中链接，但这可能是耗时的，主要还是看HTML有多大。当它每发现一个zip文件，就去调用`retrieveZip:`方法。当它每发现一张图片（image），就去用`initWithSourceURL`创建一个`ImageInfo`对象。
 _____------
 `ImageInfo`的`initWithSourceURL:`方法 : 调用`getImage`方法，用`[NSData dataWithContentsOfURL:...];`同步地去网络拉取image.就像`[NSString stringWithContentsOfURL:…]`方法一样，会阻碍程序继续执行，除非该方法执行完毕，当然了，这会花费很长时间的！你几乎从来没有想要在你的应用程序中使用这种方法。
@@ -66,7 +65,7 @@ _-----
  首先，替换同步下载文件这种最慢的操作。虽然苹果内置的`NSURLRequest`和`NSURLConnection`类与封装的类[ASIHTTPRequest](http://allseeing-i.com/ASIHTTPRequest/)没什么不同，但由于我更喜欢封装好的类，并且`ASIHTTPRequest`会使得异步下载更简单。所以，我们将用这个类库来下载文件，就让我们把它加入到`ImageGrabber`这个工程中吧。
 
 如果你还没有`ASIHTTPRequest`，请先[下载ASIHTTPRequest](http://github.com/pokeb/asi-http-request/tarball/master)，一旦你下载成功，右击`ImageGrabber`工程，选择`New Group`，并且给这**new group **命名为`ASIHTTPRequest`，然后拖拽`ASIHTTPRequest\Classes`目录（ASIAuthenticationDialog.h和其它一些, 但是不要添加 ASIWebPageRequest, CloudFiles, S3, and Tests.）到`ASIHTTPRequest`group。确保*“Copy items into destination group’s folder (if needed)”*选中, 然后再点击*完成*。
-     重复上面的操作，导入`ASIHTTPRequest\External\Reachability`，它也是工程需要的。
+重复上面的操作，导入`ASIHTTPRequest\External\Reachability`，它也是工程需要的。
 
 最后一步是添加[ASIHTTPRequest](http://allseeing-i.com/ASIHTTPRequest/)，你需要在你的工程链接必须的frameWorks，具体操作：* Build Phases* --->  *Link Binary with Libraries*,添加`CFNetwork.framework`,`SystemConfiguration.framework`,`MobileCoreServices.framework`.
      
