--- a/161026—iOS上的多线程和GCD入门教程.md
+++ b/161026—iOS上的多线程和GCD入门教程.md
@@ -73,7 +73,7 @@ _-----
 打开`ImageManager.m`做以下改变：
 ```
 // Add to top of file
-#import "ASIHTTPRequest.h"
+#import "ASIHTTPRequest.
  
 // Replace retrieveZip with the following
 - (void)retrieveZip:(NSURL *)sourceURL {
@@ -210,14 +210,16 @@ _-----
 }];
 ```
 那么我们该怎样让这繁重的工作在后台处理呢？
-     好吧，iOS3.2介绍了一种简单的（非常有效的）方法来解决这个问题，通过GCD。基本的，无论什么时候你想在后台跑一些东西，你只需要调用`dispatch_async`并且传入对应参数即可。GCD会为你处理所有---在它需要的时候它会创建新的线程，并且会重用那些过去的可用的（已经创建过，并且已经使用过，但是截至目前又是空闲的）线程。
+好吧，iOS3.2介绍了一种简单的（非常有效的）方法来解决这个问题，通过GCD。基本的，无论什么时候你想在后台跑一些东西，你只需要调用`dispatch_async`并且传入对应参数即可。GCD会为你处理所有---在它需要的时候它会创建新的线程，并且会重用那些过去的可用的（已经创建过，并且已经使用过，但是截至目前又是空闲的）线程。
      
 当你调用`dispatch_async`,你传入一个*dispatch queue*参数，你可以认为这是一个存储你传入的所有blocks的列表，遵循`先进先出`原则。
 你也可以自己创建*dispatch queue*（通过dispatch_create），或者你也可以（通过dispatch_get_main_queue）得到一个特殊的主线程的*dispatch queue*。这里我们将创建一个用来在后台执行任务（解析HTML以及保存/解压zip文件）的名叫“backgroundQueue”的*dispatch queue*。
 #Dispatch Queues, Locks, and Cat Food
      
 调度队列（dispatch queue）默认情况下是串行的，回想我们最早关于猫的举例，如果两只猫同时想得到猫食盘会发生什么？这是个大问题。但是我们把所有的猫放在一条线上，并且告诉它们“如果它们想接近猫食盘，你们不得不排成一队”，要是生活如此简单锁好。
+
 ![CatsInLine.jpg](http://upload-images.jianshu.io/upload_images/402808-44ceec96d7117682.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 这也是最基本是想法使用调度队列（dispatch queue）来保护数据。你设置你的代码以致于特殊的数据只能被一个特殊的调度队列（dispatch queue）访问。这样既然调度队列（dispatch queue）串行运行blocks,就能保证同一时间只有一个调度队列（dispatch queue）能访问这个数据结构。
      
 在这个App中，我们有2个数据结构我们必须要保护：
