--- a/161026—iOS上的多线程和GCD入门教程.md
+++ b/161026—iOS上的多线程和GCD入门教程.md
@@ -1,3 +1,5 @@
+> [原文链接](https://www.raywenderlich.com/4295/multithreading-and-grand-central-dispatch-on-ios-for-beginners-tutorial)
+> 由于作者文章11年写的，给的demo以及文中错误地方，在翻译的时候我已经改正！你也可以在[简书](http://www.jianshu.com/p/952085b939f2)上看到！
 你有没有遇到这种情况：当你开发一个app时，某个地方你想处理一    些事情，但是由于UI长时间没有反应而停顿了好长时间？
 通常，这种迹象说明，你的app需要多线程处理下!
 在这个教程，你将获得关于iOS上可用的核心多线程API：GCD的相关经验！
@@ -216,7 +218,7 @@ _-----
 你也可以自己创建*dispatch queue*（通过dispatch_create），或者你也可以（通过dispatch_get_main_queue）得到一个特殊的主线程的*dispatch queue*。这里我们将创建一个用来在后台执行任务（解析HTML以及保存/解压zip文件）的名叫“backgroundQueue”的*dispatch queue*。
 #Dispatch Queues, Locks, and Cat Food
      
-调度队列（dispatch queue）默认情况下是串行的，回想我们最早关于猫的举例，如果两只猫同时想得到猫食盘会发生什么？这是个大问题。但是我们把所有的猫放在一条线上，并且告诉它们“如果它们想接近猫食盘，你们不得不排成一队”，要是生活如此简单锁好。
+调度队列（dispatch queue）默认情况下是串行的，回想我们最早关于猫的举例，如果两只猫同时想得到猫食盘会发生什么？这是个大问题。但是我们把所有的猫放在一条线上，并且告诉它们“如果它们想接近猫食盘，你们不得不排成一队”，要是生活如此简单多好。
 
 ![CatsInLine.jpg](http://upload-images.jianshu.io/upload_images/402808-44ceec96d7117682.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
