--- a/161026—iOS上的多线程和GCD入门教程.md
+++ b/161026—iOS上的多线程和GCD入门教程.md
@@ -1,5 +1,12 @@
 > [原文链接](https://www.raywenderlich.com/4295/multithreading-and-grand-central-dispatch-on-ios-for-beginners-tutorial)
 > 由于作者文章11年写的，给的demo以及文中错误地方，在翻译的时候我已经改正！你也可以在[简书](http://www.jianshu.com/p/952085b939f2)上看到！
+
+> > 写在前面的话：建议通篇先看完，不要一开始就一步一步读下去，并且按照作者提供的链接下载阅读或者尝试，整篇文章讲的很好，个人很喜欢作者幽默风趣，善举例子说明的风格，而相关代码，由于作者链接的网站改版，就算运行也获取不到想要的效果，所以没必要都下载下来看。为此，我用自己最简短的总结概括下：
+> > 1. tableview上加载既有图片又有文字的数据（所有数据是基于HTML的，需要解析HTML，拉取图片ZIP文件，并解压ZIP文件）；
+> > 2. 最开始作者处理的方案是所有的解析HTML，下载ZIP文件解压ZIP文件都放在主线程，（结果卡顿很久，影响UI和用户交互）；
+> > 3. 作者开始使用ASI异步下载，并使用**通知**回调，但是这时上上下下来回滑动，界面就卡死，于是作者加入了**dispatch_async**,保证所有耗时操作（比如：解析HTML，下载ZIP，解压ZIP）都放后台处理，而更新UI以及显示图片都放主线程处理。
+> > 4. 最后提及**NSOperations**以及**operation queues**,而前者是基于GCD的。
+
 你有没有遇到这种情况：当你开发一个app时，某个地方你想处理一    些事情，但是由于UI长时间没有反应而停顿了好长时间？
 通常，这种迹象说明，你的app需要多线程处理下!
 在这个教程，你将获得关于iOS上可用的核心多线程API：GCD的相关经验！
